Fixed many expression / language mistakes (closes #28, closes #33, closes #34)

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,8 +1,8 @@
 \begin{abstract}
-Segment street on a pixel basis from photographs taken from a drivers
-perspective is important for self-driving cars and can also support other
-object recognition tasks. A framework called SST was developed to examine
-different neural networks accuracy and execution time. The best neural network
-achieved an $F_1$-score of \SI{89.5}{\percent} with a simple feed forward
+Pixel-wise street segmentation of photographs taken from a drivers perspective
+is important for self-driving cars and can also support other object
+recognition tasks. A framework called SST was developed to examine the accuracy
+and execution time of different neural networks. The best neural network
+achieved an $F_1$-score of \SI{89.5}{\percent} with a simple feedforward
 neural network which trained to solve a regression task.
 \end{abstract}
