--- a/ch1-introduction.tex
+++ b/ch1-introduction.tex
@@ -11,8 +11,10 @@ especially in computer vision, suggest that \glspl{CNN} might be able to
 achieve higher classification accuracy on road segmentation tasks then those
 traditional approaches.
 
-The algorithms need to be fast (e.g. classify an image in less than
-\SI{0.3}{\second}) to be applicable in self-driving cars.
+This paper was written in the context of a machine learning hands-on course
+at FZI, where self-driving cars are developed. One requirement of self-driving
+cars is that the algorithms need to be fast (e.g. classify an image in less
+than \SI{20}{\milli\second}).
 
 \Cref{sec:related-work} mentions published work which influenced us in the
 choice of our methods. The basics methods used are explained in
