--- a/ch5-frameworks.tex
+++ b/ch5-frameworks.tex
@@ -11,9 +11,9 @@ meaningful error messages.
 Theano is a Python package which allows symbolic computation of derivatives as
 well as automatic generation of GPU code. This is used to calculate the weight
 update function for arbitrary feed-forward networks. Lasagne makes using Theano
-simpler by providing some basic layer types like fully connected layers,
+simpler by providing basic layer types like fully connected layers,
 convolutional layers and pooling layers with their update function. nolearn
-adds some syntactic sugar and neural network objects with a similar interface
+adds syntactic sugar and neural network objects with a similar interface
 as the \verb+scikit-learn+ package uses for its classifiers~\cite{scikit-learn}.
 
 \input{ch5-sst}
