--- a/ch5-sst.tex
+++ b/ch5-sst.tex
@@ -8,7 +8,8 @@ KIT by Sebastian Bittel, Vitali Kaiser, Marvin Teichmann and Martin Thoma.
 
 \subsubsection{Installation}
 \verb+sst+ can be installed via \verb+pip install sst+. To make the
-installation as simple as possible, this does not install all requirements.
+installation as simple as possible, this does not try to install all
+requirements.
 \verb+sst selfcheck+ gives the user the possibility to check which packages
 are still required and manually install them.
 
@@ -25,7 +26,7 @@ neural network, the second variable indicates if the neural network was trained
 to classify each pixel of the complete patch (\verb+fully = True+) or only the
 center pixel (\verb+fully = False+).
 
-\verb+sst --help+ shows all subcommands. The subcommands are
+\verb+sst --help+ shows all subcommands. The subcommands are currently
 
 \begin{itemize}
     \item \verb+selfcheck+: Test which components or Python packages are
