--- a/ch7-results.tex
+++ b/ch7-results.tex
@@ -15,29 +15,18 @@ segmentation~\cite{Tarel2009}).
 
 For the evaluation of the following experiments we used these metrics:
 accuracy ($\mathbf{ACC}$), average precision ($\mathbf{AP}$), precision ($\mathbf{PRE}$),  recall ($\mathbf{REC}$), false positive rate ($\mathbf{FPR}$),  false negative rate ($\mathbf{FNR}$)
-and the $F_1$-measure ($\mathbf{F_1}$) \cref{eq:accuracy} - (\ref{eq:fMeasure}) (true positive (TP), true negative (TN), false positive (FP), false negative (FN)).
+and the $F_1$-measure ($\mathbf{F_1}$), see~\crefrange{eq:accuracy}{eq:fMeasure}.
+Those metrics make use of true positive (TP), true negative (TN), false positive (FP) and false negative (FN).
 
-\begin{equation} \label{eq:accuracy}
-\text{ACC} = \frac{TP + TN}{TP + FP + TN + FN}
-\end{equation}
-\begin{equation} \label{eq:precision}
-\text{PRE} = \frac{TP}{TP + FP}
-\end{equation}
-\begin{equation} \label{eq:recall}
-\text{REC} = \frac{TP}{TP + FN}
-\end{equation}
-\begin{equation} \label{eq:fpr}
-\text{FPR} = \frac{FP}{FP + TN}
-\end{equation}
-\begin{equation} \label{eq:fnr}
-\text{FNR} = \frac{FN}{TP+ FN}
-\end{equation}
-\begin{equation} \label{eq:ap}
-\text{AP} = \frac{1}{11} \displaystyle\sum_{r \in 0,0.1,..1} \max_{\tilde{r}: \tilde{r} > r} \text{Precision}(\tilde{r})
-\end{equation}
-\begin{equation} \label{eq:fMeasure}
-F_1= \frac{2 \cdot TP}{2TP +FP +FN}
-\end{equation}
+\begin{align} \label{eq:accuracy}
+\text{ACC} &= \frac{TP + TN}{TP + FP + TN + FN}\\
+\text{PRE} &= \frac{TP}{TP + FP}\label{eq:precision}\\
+\text{REC} &= \frac{TP}{TP + FN}\label{eq:recall}\\
+\text{FPR} &= \frac{FP}{FP + TN} \label{eq:fpr}\\
+\text{FNR} &= \frac{FN}{TP+ FN}\label{eq:fnr}\\
+\text{AP} &= \frac{1}{11} \displaystyle\sum_{r \in 0,0.1,\dots 1} \max_{\tilde{r}: \tilde{r} > r} \text{Precision}(\tilde{r})\label{eq:ap}\\
+F_1 &= \frac{2 \cdot TP}{2TP +FP +FN}\label{eq:fMeasure}
+\end{align}
 
 %
 In \cref{eq:ap}  $\text{Precision}(\tilde{r})$ is the measured precision at recall $\tilde{r}$ ~\cite{everingham2010pascal}. These metrics are also used by the official KITTI evaluation. \\
@@ -50,8 +39,8 @@ was submitted for the official KITTI evaluation
 
 Our goal was to achieve an adequate classification performance while staying
 within a time frame of \textbf{\SI{20}{\milli\second}} as maximal
-classification time per image. This would allow our approach to be a used in a real-time application.
-As the normal use case of road segmentation would be in autonomous cars the real-time ability is a crucial point.\\
+classification time per image. As the normal use case of road segmentation
+would be in autonomous cars the real-time ability is a crucial point.\\
 
 We used a computer with these specifications for the experiments (GPU was used
 for training and testing):
@@ -65,7 +54,7 @@ for training and testing):
 approach using the models and parameters as described in \cref{sec:model}.
 It shows clearly that the regression model has an
 overall better $F_1$-measure and accuracy score than the classification model.
-Surprisingly, a smaller stride does not automatically lead to a better
+Surprisingly, a smaller stride does not automatically lead to better
 performance. The classification model shows  the best result with a stride of $s=37$,
 while in the regression based approach a stride $s=51$ achieves the
 best performance. Unfortunately the RAM of the graphic card limited our
@@ -91,7 +80,7 @@ our time constraint and even enhance our performance.\\
         \caption{Results of classification (cla.) and regression (reg.) models
                  with different strides $s$ on our own test set (58~images,
                  $ ~6.7 \cdot 10^6$ pixels). The table entries highlighted in
-                 red are the best evaluation score regarding different parameterizations.}
+                 red are the best evaluation scores regarding different parameterizations.}
         \label{tab:ownapproach}
     \end{center}
 \end{table}
@@ -99,7 +88,7 @@ our time constraint and even enhance our performance.\\
 
 
 The predefined time constraint (classification of
-one image in under \SI{20}{\milli\second}) was meet which is shown by the run time evaluation
+one image in under \SI{20}{\milli\second}) was met which is shown by the run time evaluation
 displayed in \Cref{tab:runtime}. As expected, the runtime increases with a
 smaller stride size. The classification model shows an overall faster run time
 performance as the regression. Finally, we meet the time constraint
@@ -124,13 +113,13 @@ by using a stride of $s=51$ in both approaches.
     \begin{subfigure}[t]{\columnwidth}
         \includegraphics[width=\columnwidth]{figures/kitti_eval/Persp_um_road_000077.png}
         \includegraphics[width=\columnwidth]{figures/kitti_eval/Persp_um_road_000095.png}
-        \caption{Shows KITTI test data on which our neural net performed badly. Here, red denotes false negatives, blue areas correspond to false positives and green represents true positives.}
+        \caption{KITTI test data on which our neural net performed badly. Here, red denotes false negatives, blue areas correspond to false positives and green represents true positives.}
         \label{fig:sfig1}
     \end{subfigure}
     \begin{subfigure}[t]{\columnwidth}
         \includegraphics[width=\columnwidth]{figures/kitti_eval/Persp_uu_road_000027.png}
         \includegraphics[width=\columnwidth]{figures/kitti_eval/Persp_uu_road_000082.png}
-        \caption{Shows KITTI test data on which our neural net performed well.}
+        \caption{KITTI test data on which our neural net performed well.}
         \label{fig:sfig2}
     \end{subfigure}
 \end{figure*}
