--- a/ch8-discussion.tex
+++ b/ch8-discussion.tex
@@ -3,9 +3,9 @@
 \section{Conclusion}\label{sec:discussion}
 
 The results presented in this paper were obtained over five months in a
-practical course. We started with the Caffe framework and tinkered around with
+hands-on course. We started with the Caffe framework and experimented with
 a fork created by Jonathan Long. The model he provided could not be used on our
-computers, because \SI{4}{\gibi\byte} of GPU RAM were not enough to evaluate
+computers, because \SI{4}{\gibi\byte} of GPU~RAM were not enough to evaluate
 the model. We tried to adjust the model model, but we failed due to the lack of
 documentation, cryptic error messages and random crashes while training or
 evaluating. This was the reason why we switched to Lasagne. Using this
