--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -1,4 +1,4 @@
-\documentclass[technote,a4paper]{IEEEtran}
+\documentclass[technote,a4paper,leqno]{IEEEtran}
 \usepackage{amssymb, amsmath} % needed for math
 
 
@@ -24,6 +24,7 @@
 \usepackage{multirow}
 \usepackage{pgfplots}
 \usepackage{wasysym}
+\usepackage[symbol]{footmisc}
 \usepackage{float}
 \usepackage{caption}
 \usepackage{subcaption}
@@ -32,7 +33,7 @@
 \newcommand\mynobreakpar{\par\nobreak\@afterheading}
 \makeatother
 \usepackage[noadjust]{cite}
-\usepackage[nameinlink,noabbrev]{cleveref} % has to be after hyperref, nthe l.137 ...eam attr{/N 4}  file{sRGBIEC1966-2.1.icmorem, amsthm
+\usepackage[nameinlink,noabbrev,capitalise]{cleveref} % has to be after hyperref, nthe l.137 ...eam attr{/N 4}  file{sRGBIEC1966-2.1.icmorem, amsthm
 \usepackage[binary-units,group-separator={,}]{siunitx}
 \sisetup{per-mode=fraction,binary-units=true}
 \DeclareSIUnit\pixel{px}
@@ -68,7 +69,7 @@
 \input{ch4-our-model}
 \input{ch7-results}
 \input{ch8-discussion}
-
+% \clearpage
 
 \bibliographystyle{IEEEtranSA}
 \bibliography{pixel-wise-street-segmentation}
