Fix possible problems reported by chktex

--- a/ch2-related-work.tex
+++ b/ch2-related-work.tex
@@ -7,17 +7,17 @@ Whereas in road segmentation often only two classes exist and more assumptions
 can be applied.\\
 In the first publications, roads were usually annotated by color-based
 histogram approaches and specific model knowledge. Examples are the in 1994
-introduced approach \cite{Beucher1990} using the watershed algorithm or
+introduced approach~\cite{Beucher1990} using the watershed algorithm or
 \cite{aly2008real} where roads were annotated indirectly by lane markings found
 with a Hough transformation.\\
 Later insights of general scene parsing where transferred and more generic
-approaches like \cite{6182716} have achieved remarkable results with a
+approaches like~\cite{6182716} have achieved remarkable results with a
 \gls{MRF} and superpixels.\\ The impressive classification results of
 \glspl{CNN} like AlexNet~\cite{krizhevsky2012imagenet} or
 GoogLeNet~\cite{SzegedyLJSRAEVR14} during the Google ImageNet LSVRC-2010
 contest, made \glspl{CNN} interesting for all kinds of computer vision problems
 like segmentation.\\
-With \cite{long2014fully} Long and his team introduced a method for general
+With~\cite{long2014fully} Long and his team introduced a method for general
 scene parsing based on \glspl{FCN} and a deconvolutional layer.\\
 This approach is used as a blueprint to our implementation, described in
 \cref{sec:model}. Therefore the main concepts are introduced in
@@ -29,7 +29,7 @@ deconvolution layer interpolation to the original resolution. With a fully
 connected convolutional layer in the end, the multiple outputs are combined
 into one classification heat map for every class.\\
 
-In \cite{mohan2014deep} a approach is presented, which makes also use of a
+In~\cite{mohan2014deep} a approach is presented, which makes also use of a
 \gls{CNN} in combination with deconvolution. In comparison to Long's network,
 among others it is less deep and uses less convolutional then deconvolutional
 layers. Furthermore the input image is divided in multiple patches and for each
@@ -69,8 +69,8 @@ from the input image.
 \begin{figure}[htb]
     \centering
     \includegraphics[width=9cm]{figures/fcnn}
-    \caption{Comparison of a \gls{CNN} for classification (top) and a \gls{FCN} which creates a heat map (bottom). The image was taken from~\cite{long2014fully}.}
-    \label{fig:fcn}
+    \caption{Comparison of a \gls{CNN} for classification (top) and a \gls{FCN} which creates a heat map (bottom). The image was taken from~\cite{long2014fully}.}%
+\label{fig:fcn}
 \end{figure}
 
 \subsection{Fully connected convolutional layer}
@@ -83,6 +83,6 @@ fully connected layer in a classification \gls{CNN}.
 Deconvolutions are inverse convolutions. In context of neural networks the
 function for forward and backward calculation are just switched. It is often
 combined with unpooling and allows to learn how to reconstruct a larger image
-region from a smaller input. Long indicates in \cite{long2014fully} its
+region from a smaller input. Long indicates in~\cite{long2014fully} its
 similarity to interpolation. He explains it as a highly parametrized non-linear
 interpolation.
