--- a/ch5-sst.tex
+++ b/ch5-sst.tex
@@ -3,7 +3,7 @@
 \subsection{SST}\label{sec:sst}
 \Gls{sst} is a Python package hosted on \gls{PyPI} and developed on GitHub.
 It makes use of Lasagne (see \cref{sec:frameworks}). It was mainly developed
-during the course \enquote{Machine Learning Laboratory - Applications} at
+during the course \enquote{Machine Learning Laboratory --- Applications} at
 KIT by Sebastian Bittel, Vitali Kaiser, Marvin Teichmann and Martin Thoma.
 
 \subsubsection{Installation}
