--- a/ch3-datasets.tex
+++ b/ch3-datasets.tex
@@ -1,7 +1,7 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
 \subsection{Data Sets}\label{sec:datasets}
-The KITTI Road Estimation data set \cite{Fritsch2013} was used for training of
+The KITTI Road Estimation data set~\cite{Fritsch2013} was used for training of
 the models and for obtaining the experimental results reported in
 \cref{sec:evaluation}.
 
