--- a/ch7-results.tex
+++ b/ch7-results.tex
@@ -18,18 +18,18 @@ accuracy ($\mathbf{ACC}$), average precision ($\mathbf{AP}$), precision ($\mathb
 and the $F_1$-measure ($\mathbf{F_1}$), see~\crefrange{eq:accuracy}{eq:fMeasure}.
 Those metrics make use of true positive (TP), true negative (TN), false positive (FP) and false negative (FN).
 
-\begin{align} \label{eq:accuracy}
+\begin{align}\label{eq:accuracy}
 \text{ACC} &= \frac{TP + TN}{TP + FP + TN + FN}\\
 \text{PRE} &= \frac{TP}{TP + FP}\label{eq:precision}\\
 \text{REC} &= \frac{TP}{TP + FN}\label{eq:recall}\\
-\text{FPR} &= \frac{FP}{FP + TN} \label{eq:fpr}\\
+\text{FPR} &= \frac{FP}{FP + TN}\label{eq:fpr}\\
 \text{FNR} &= \frac{FN}{TP+ FN}\label{eq:fnr}\\
 \text{AP} &= \frac{1}{11} \displaystyle\sum_{r \in 0,0.1,\dots 1} \max_{\tilde{r}: \tilde{r} > r} \text{Precision}(\tilde{r})\label{eq:ap}\\
 F_1 &= \frac{2 \cdot TP}{2TP +FP +FN}\label{eq:fMeasure}
 \end{align}
 
 %
-In \cref{eq:ap}  $\text{Precision}(\tilde{r})$ is the measured precision at recall $\tilde{r}$ ~\cite{everingham2010pascal}. These metrics are also used by the official KITTI evaluation. \\
+In \cref{eq:ap}  $\text{Precision}(\tilde{r})$ is the measured precision at recall $\tilde{r}$~\cite{everingham2010pascal}. These metrics are also used by the official KITTI evaluation. \\
 To be able to evaluate different approaches we used only the
 training data of the KITTI data set, as the ground truth for the test data is
 not publicly available. We splitted the training data beforehand 20 to 80
@@ -80,8 +80,8 @@ our time constraint and even enhance our performance.\\
         \caption{Results of classification (cla.) and regression (reg.) models
                  with different strides $s$ on our own test set (58~images,
                  $ ~6.7 \cdot 10^6$ pixels). The table entries highlighted in
-                 red are the best evaluation scores regarding different parameterizations.}
-        \label{tab:ownapproach}
+                 red are the best evaluation scores regarding different parameterizations.}%
+\label{tab:ownapproach}
     \end{center}
 \end{table}
 
@@ -104,8 +104,8 @@ by using a stride of $s=51$ in both approaches.
             \textbf{classification} & \SI{1.83}{\second} & \SI{0.20}{\second}  & \SI{0.11}{\second}\\
             \bottomrule
         \end{tabular}
-        \caption{Runtime per image ($621 \times 188$ pixel).}
-        \label{tab:runtime}
+        \caption{Runtime per image ($621 \times 188$ pixel).}%
+\label{tab:runtime}
     \end{center}
 \end{table}
 
@@ -113,14 +113,14 @@ by using a stride of $s=51$ in both approaches.
     \begin{subfigure}[t]{\columnwidth}
         \includegraphics[width=\columnwidth]{figures/kitti_eval/Persp_um_road_000077.png}
         \includegraphics[width=\columnwidth]{figures/kitti_eval/Persp_um_road_000095.png}
-        \caption{KITTI test data on which our neural net performed badly. Here, red denotes false negatives, blue areas correspond to false positives and green represents true positives.}
-        \label{fig:sfig1}
+        \caption{KITTI test data on which our neural net performed badly. Here, red denotes false negatives, blue areas correspond to false positives and green represents true positives.}%
+\label{fig:sfig1}
     \end{subfigure}
     \begin{subfigure}[t]{\columnwidth}
         \includegraphics[width=\columnwidth]{figures/kitti_eval/Persp_uu_road_000027.png}
         \includegraphics[width=\columnwidth]{figures/kitti_eval/Persp_uu_road_000082.png}
-        \caption{KITTI test data on which our neural net performed well.}
-        \label{fig:sfig2}
+        \caption{KITTI test data on which our neural net performed well.}%
+\label{fig:sfig2}
     \end{subfigure}
 \end{figure*}
 
@@ -137,8 +137,8 @@ by using a stride of $s=51$ in both approaches.
         \bottomrule
         \end{tabular}
     \end{center}
-    \caption{Results of our regression model (stride 51) on the official KITTI evaluation with different road types.}
-    \label{tab:kitti}
+    \caption{Results of our regression model (stride 51) on the official KITTI evaluation with different road types.}%
+\label{tab:kitti}
 \end{table*}
 
 
